Changes some css colors to their respective variables. Getting an issue where buttons in listing cards are white in dark mode.

--- a/Frontend/src/styles/ListingCard.css
+++ b/Frontend/src/styles/ListingCard.css
@@ -9,6 +9,7 @@
     background-color: hsla(0, 0%, 90%, 0.2);
   }
 }
+
 /* slightly transparent fallback for Firefox (not supporting backdrop-filter) */
 @supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
   .listing-card-container {
@@ -16,25 +17,23 @@
   }
 }
 
-.referralButton{
+.referralButton {
   width: fit-content;
   padding: 10px;
-  box-shadow: 3px 3px 8px var(--light-shadow), -3px -3px 10px white;
+  box-shadow: 3px 3px 8px var(--light-shadow), -3px -3px 10px var(--highlight);
   border-top-style: hidden;
   border-right-style: hidden;
   border-left-style: hidden;
   border-bottom-style: hidden;
   border-radius: 5px;
-    
+
 
 }
 
-.referralButton:hover{
-  
+.referralButton:hover {
   cursor: pointer;
   box-shadow: inset 3px 3px 6px var(--light-shadow),
-  inset -3px -3px 8px var(--highlight);
-
+    inset -3px -3px 8px var(--highlight);
 }
 
 .listing-card-container {
@@ -44,6 +43,7 @@
   width: 100%;
   height: 100%;
 }
+
 .listing-card {
   background-color: var(--background);
   width: 54rem;
@@ -56,7 +56,7 @@
   top: 50%;
   margin-left: -27rem;
   margin-top: -10%;
-  box-shadow: 2px 2px 10px var(--dark-shadow);
+  box-shadow: 2px 2px 10px hsla(0, 0%, 0%, 0.2);
 }
 
 #popup-title-sal {
@@ -78,7 +78,7 @@
 
 #close-btn {
   font-size: large;
-  color: var(--card-close-button);
+  color: hsl(0, 0%, 10%);
   width: 30px;
   height: 30px;
   padding: 4px;
@@ -86,8 +86,9 @@
   margin-left: 30px;
   margin-top: -2px;
 }
+
 #close-btn:hover {
-  background-color: var(--card-close-button-hover);
+  background-color: lightgray;
   cursor: pointer;
 }
 
@@ -97,12 +98,11 @@
 }
 
 #popup-date {
-  color: var(--font-sub);
+  color: gray;
   font-size: small;
 }
 
 #ref-btn {
-  color: var(--font-color);
   margin-top: 20px;
   width: 25%;
   height: 42px;
@@ -110,14 +110,15 @@
   outline: none;
   border-style: none;
   background-color: var(--background);
-  box-shadow: 
+  box-shadow:
     5px 5px 8px var(--light-shadow),
     -5px -5px 10px var(--highlight);
   border-radius: 10px;
 }
+
 #ref-btn:hover {
   cursor: pointer;
-  box-shadow: 
+  box-shadow:
     inset 5px 5px 6px var(--light-shadow),
     inset -5px -5px 8px var(--highlight);
 }
